tests/ui/parser/recover/recover-pat-exprs.stderr
error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:5:9
   |
LL |         x.y => (),
   |         ^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:6:9
   |
LL |         x.0 => (),
   |         ^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:7:9
   |
LL |         x._0 => (),
   |         ^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:8:9
   |
LL |         x.0.1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:9:9
   |
LL |         x.4.y.17.__z => (),
   |         ^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:12:12
   |
LL |     { let x.0e0; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:13:12
   |
LL |     { let x.-0.0; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:14:12
   |
LL |     { let x.-0; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:16:12
   |
LL |     { let x.0u32; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:17:12
   |
LL |     { let x.0.0_f64; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:23:9
   |
LL |         x[0] => (),
   |         ^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:24:9
   |
LL |         x[..] => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `[`
  --> $DIR/recover-pat-exprs.rs:27:12
   |
LL |     { let x[0, 1, 2]; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `[`
  --> $DIR/recover-pat-exprs.rs:28:12
   |
LL |     { let x[0; 20]; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `:`, `;`, `=`, `@`, or `|`, found `[`
  --> $DIR/recover-pat-exprs.rs:29:12
   |
LL |     { let x[]; }
   |            ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: expected one of `)`, `,`, `@`, or `|`, found `[`
  --> $DIR/recover-pat-exprs.rs:30:13
   |
LL |     { let (x[]); }
   |             ^
   |             |
   |             expected one of `)`, `,`, `@`, or `|`
   |             help: missing `,`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:37:9
   |
LL |         x.f() => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:38:9
   |
LL |         x._f() => (),
   |         ^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:39:9
   |
LL |         x? => (),
   |         ^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:40:9
   |
LL |         ().f() => (),
   |         ^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:41:9
   |
LL |         (0, x)?.f() => (),
   |         ^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:42:9
   |
LL |         x.f().g() => (),
   |         ^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:43:9
   |
LL |         0.f()?.g()?? => (),
   |         ^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:50:9
   |
LL |         x as usize => (),
   |         ^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:51:9
   |
LL |         0 as usize => (),
   |         ^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:52:9
   |
LL |         x.f().0.4 as f32 => (),
   |         ^^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:59:9
   |
LL |         1 + 1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:60:10
   |
LL |         (1 + 2) * 3 => (),
   |          ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:60:9
   |
LL |         (1 + 2) * 3 => (),
   |         ^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:67:5
   |
LL |     1 + 2 * PI.cos() => 2,
   |     ^^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:73:9
   |
LL |         u8::MAX.abs() => (),
   |         ^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:75:9
   |
LL |         x.sqrt() @ .. => (),
   |         ^^^^^^^^ arbitrary expressions are not allowed in patterns

error: left-hand side of `@` must be a binding
  --> $DIR/recover-pat-exprs.rs:75:9
   |
LL |         x.sqrt() @ .. => (),
   |         --------^^^--
   |         |          |
   |         |          also a pattern
   |         interpreted as a pattern, not a binding
   |
   = note: bindings are `x`, `mut x`, `ref x`, and `ref mut x`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:78:17
   |
LL |         z @ w @ v.u() => (),
   |                 ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:80:9
   |
LL |         y.ilog(3) => (),
   |         ^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:82:9
   |
LL |         n + 1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:84:10
   |
LL |         ("".f() + 14 * 8) => (),
   |          ^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:87:9
   |
LL |         f?() => (),
   |         ^^^^ arbitrary expressions are not allowed in patterns

error: expected one of `)`, `,`, or `|`, found `+`
  --> $DIR/recover-pat-exprs.rs:89:12
   |
LL |         (_ + 1) => (),
   |            ^ expected one of `)`, `,`, or `|`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:93:9
   |
LL |     let 1 + 1 = 2;
   |         ^^^^^ arbitrary expressions are not allowed in patterns

error: expected one of `)`, `,`, `@`, or `|`, found `*`
  --> $DIR/recover-pat-exprs.rs:96:28
   |
LL |     let b = matches!(x, (x * x | x.f()) | x[0]);
   |                            ^ expected one of `)`, `,`, `@`, or `|`
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: while parsing argument for this `pat` macro fragment

error: aborting due to 41 previous errors

